--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Conversor BTC ↔ USD</title>
+  <title>Conversor de Monedas</title>
   <link rel="stylesheet" href="./css/styles.css" />
-
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <header>
-    <h1>💱 Conversor Bitcoin ↔ Dólar</h1>
+    <h1>💱 Conversor de Monedas</h1>
   </header>
 
   <main>
@@ -21,6 +20,10 @@
         <select id="tipo" required>
           <option value="btc-usd">BTC → USD</option>
           <option value="usd-btc">USD → BTC</option>
+          <option value="usd-eur">USD → EUR</option>
+          <option value="eur-usd">EUR → USD</option>
+          <option value="usd-ars">USD → ARS</option>
+          <option value="ars-usd">ARS → USD</option>
         </select>
 
         <label for="cantidad">Cantidad:</label>
