--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <p>Simulador</p>
+    <p>Simulador-JS</p>
   </footer>
 
   <script src="./js/app.js" defer></script>
